refacto documentation
