# daikoku/app/domain/tenantEntities.scala
@@ -177,7 +177,6 @@ case class DaikokuStyle(
     homeCmsPage: Option[String] = None,
     notFoundCmsPage: Option[String] = None,
     authenticatedCmsPage: Option[String] = None,
-    cacheTTL: Int = 60000,
     logo: String = "/assets/images/daikoku.svg",
     footer: Option[String] = None
 ) extends CanJson[DaikokuStyle] {
