# daikoku/public/swaggers/admin-api-openapi.json
@@ -305,16 +305,6 @@
             "type": "string",
             "nullable": true
           },
-          "cacheTTL": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "cmsHistoryLength": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
           "logo": {
             "type": "string",
             "nullable": true
